@@ -4,24 +4,16 @@
 
 #include "Time.h"
 
-namespace Time
-{
-
 #include <unistd.h>	
 #include <sys/time.h>
- 
-	/*
-void Init()
-{
-	gettimeofday(&_startTime, NULL);
-}
-	*/
+
+bool Time::Stamp::_did_init = false;
 	
-Stamp getCurrentStamp()
+Time::Stamp Time::getCurrentStamp()
 {
 	Stamp n;
 #ifndef __WIN32__
-	gettimeofday(&n, NULL);
+	gettimeofday(&n._val, NULL);
 #else
   SYSTEMTIME sysTime;
   FILETIME fileTime;  /* 100ns == 1 */
@@ -33,55 +25,55 @@ Stamp getCurrentStamp()
    * FILETIME. */
   memcpy(&i, &fileTime, sizeof(LARGE_INTEGER));
 
-  n.tv_sec = i.QuadPart / 10000000; /*10e7*/
-  n.tv_usec = (i.QuadPart / 10) % 1000000;  /*10e6*/
+  n._val.tv_sec = i.QuadPart / 10000000; /*10e7*/
+  n._val.tv_usec = (i.QuadPart / 10) % 1000000;  /*10e6*/
                                   
 #endif
 	return n;
 }
+
+// The operator definitons need the Time:: prefix, since
+// they were declared in that namespace
 	
-bool operator<(const Stamp &a, const Stamp &b)
+bool Time::operator<(const Time::Stamp &a, const Time::Stamp &b)
 {
-	if (a.tv_sec == b.tv_sec)
-		return (a.tv_usec < b.tv_usec);
+	if (a._val.tv_sec == b._val.tv_sec)
+		return (a._val.tv_usec < b._val.tv_usec);
 	else
-		return a.tv_sec < b.tv_sec;
+		return a._val.tv_sec < b._val.tv_sec;
 }
 
-Stamp operator+(const Stamp &a, unsigned long msec)
+Time::Stamp Time::operator+(const Time::Stamp &a, unsigned long msec)
 {
 	Stamp ret = a;
-	ret.tv_sec += msec / 1000;
-	ret.tv_usec += (msec % 1000) * 1000;
+	ret._val.tv_sec += msec / 1000;
+	ret._val.tv_usec += (msec % 1000) * 1000;
 	
-	if (ret.tv_usec > 1000000) {
-		ret.tv_sec++;
-		ret.tv_usec-=1000000;
+	if (ret._val.tv_usec > 1000000) {
+		ret._val.tv_sec++;
+		ret._val.tv_usec-=1000000;
 	}
 	
 	return ret;
 }
 
-Stamp operator-(const Stamp &a, unsigned long msec)
+Time::Stamp Time::operator-(const Time::Stamp &a, unsigned long msec)
 {
 	Stamp ret = a;
-	ret.tv_sec -= msec / 1000;
-	ret.tv_usec -= (msec % 1000) * 1000;
+	ret._val.tv_sec -= msec / 1000;
+	ret._val.tv_usec -= (msec % 1000) * 1000;
 	
-	if (ret.tv_usec < 0) {
-		ret.tv_sec--;
-		ret.tv_usec+=1000000;
+	if (ret._val.tv_usec < 0) {
+		ret._val.tv_sec--;
+		ret._val.tv_usec+=1000000;
 	}
 	
 	return ret;
 }
 
-long operator-(const Stamp &a, const Stamp &b)
+long Time::operator-(const Time::Stamp &a, const Time::Stamp &b)
 {
-	unsigned long ret = (a.tv_sec - b.tv_sec) * 1000;
-	ret += (a.tv_usec - b.tv_usec) / 1000;
+	unsigned long ret = (a._val.tv_sec - b._val.tv_sec) * 1000;
+	ret += (a._val.tv_usec - b._val.tv_usec) / 1000;
 	return ret;
-}
-
-	
 }
