@@ -16,29 +16,45 @@ extern "C" {
 #endif
 
 namespace Time {
+
+class Stamp {
+ private:
 #if defined( __WIN32__ )
 	
 	// We roll our own timeval... may only need to be done for mingw32.
-	typedef struct eris_timeval Stamp;
+	// FIXME since we're no longer doing a typedef, do we really need to do this?
+	struct eris_timeval _val;
 
 #elif defined( macintosh )
-	typedef UnsignedWide Stamp;	// micro-seconds
+	UnsignedWide _val;	// micro-seconds
 #else
 	// POSIX, BeOS, ....
-	typedef struct timeval Stamp;
+	struct timeval _val;
 #endif	
 
-bool operator<(const Stamp &a, const Stamp &b);
+	// Hook for future expansion to other platforms,
+	// in case the timer needs initializing
+	static void Init() {_did_init = true;}
+	static bool _did_init;
 
-Stamp operator+(const Stamp &a, unsigned long msec);
-Stamp operator-(const Stamp &a, unsigned long msec);
+ public:
+	Stamp() {Init();}
+	// Don't need to call Init() in copy constructor, it must
+	// have been called when the value we're copying from was
+	// constructed
+
+	friend bool operator<(const Stamp &a, const Stamp &b);
+
+	friend Stamp operator+(const Stamp &a, unsigned long msec);
+	friend Stamp operator-(const Stamp &a, unsigned long msec);
 	
-long operator-(const Stamp &a, const Stamp &b);	
+	friend long operator-(const Stamp &a, const Stamp &b);	
 	
-void Init();	
+	friend Stamp getCurrentStamp();
+};
 	
-Stamp getCurrentStamp();
-	
-} // of namespace Time	
+inline Stamp operator+(unsigned long msec, const Stamp &a) {return a + msec;}
+
+} // of namespace Time
 
 #endif
